--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,5 +30,7 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.5'
     // ViewModel and LiveData
     implementation "android.arch.lifecycle:extensions:1.1.1"
+    //webview
+    implementation "com.thefinestartist:finestwebview:1.2.7"
 
 }
